--- a/pom.xml
+++ b/pom.xml
@@ -873,6 +873,11 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast-all</artifactId>
+			<version>2.1.2</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
