--- a/pom.xml
+++ b/pom.xml
@@ -878,6 +878,12 @@
 			<artifactId>hazelcast-all</artifactId>
 			<version>2.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-core</artifactId>
+			<version>5.1.5.FINAL</version>
+			<!-- <classifier>tests</classifier> -->
+		</dependency>
 	</dependencies>
 
 	<repositories>
