Started the Vaadin migration. Updated some tests and fixed a bug in the corrupt rule. Removed some un-used classes. Added snapshots for monitoring.
git-svn-id: http://ikube.googlecode.com/svn/trunk@939 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/integration/spring.properties
+++ b/code/core/src/main/resources/conf/integration/spring.properties
@@ -20,6 +20,7 @@ wiki.history.stored=false
 wiki.history.analyzed=true
 wiki.history.vectored=false
 wiki.history.unpack.zips=false
+wiki.history.compound.file=true
 
 wiki.history.languages.stored=false
 wiki.history.languages.analyzed=false
