--- a/pom.xml
+++ b/pom.xml
@@ -884,6 +884,11 @@
 			<version>5.1.5.FINAL</version>
 			<!-- <classifier>tests</classifier> -->
 		</dependency>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin</artifactId>
+			<version>7.0.0.alpha3</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
