--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -26,7 +26,7 @@
 
 	<target name="deploy">
 		<!-- Deploy to the server -->
-		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
+		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@ikube.be:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
 		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.6:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
 		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.7:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
 		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.14:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
@@ -72,8 +72,8 @@
 		<echo>User home: ${user.home}</echo>
 		<copy file="${configuration.directory}/${ikube.configuration.jar}" todir="./src/main/webapp/docs" failonerror="true" />
 		<!-- Deploy configuration on server -->
-		<scp todir="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
-			<fileset dir="${configuration.directory}/ikube"/>
+		<scp todir="michael:caherline@ikube.be:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
+			<fileset dir="${configuration.directory}/ikube" />
 		</scp>
 		<scp todir="michael:caherline@192.168.1.6:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
 			<fileset dir="${configuration.directory}/ikube" />
@@ -84,9 +84,6 @@
 		<scp todir="michael:caherline@192.168.1.14:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
 			<fileset dir="${configuration.directory}/ikube" />
 		</scp>
-		<!-- scp todir="michael:caherline@ikube.be:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
-			<fileset dir="${configuration.directory}/ikube" />
-		</scp -->
 	</target>
 
 	<target name="start.tomcat.cluster">
