--- a/code/web/pom.xml
+++ b/code/web/pom.xml
@@ -6,7 +6,6 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-web</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0</version>
 
 	<properties>
 		<!-- convenience to define GWT version in one place -->
@@ -17,6 +16,13 @@
 		<org.springframework.version>3.0.1.RELEASE</org.springframework.version>
 		<org.hibernate.version>3.5.1-Final</org.hibernate.version>
 	</properties>
+	
+	<parent>
+		<groupId>ikube</groupId>
+		<artifactId>ikube</artifactId>
+		<version>3.1.1-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
+	</parent>
 
 	<repositories>
 		<repository>
