--- a/pom.xml
+++ b/pom.xml
@@ -890,6 +890,16 @@
 			<version>2.4.0</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>com.smartgwt</groupId>
+			<artifactId>smartgwt</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.smartgwt</groupId>
+			<artifactId>smartgwt-skins</artifactId>
+			<version>2.4</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
