--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -1,10 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project 
+    xmlns="http://maven.apache.org/POM/4.0.0" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
+
+	<parent>
+		<groupId>ikube</groupId>
+		<artifactId>ikube</artifactId>
+		<version>3.1.1-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
+	</parent>
+	
 	<properties>
 		<webapps>webapps</webapps>
 		<ikube.war>ikube.war</ikube.war>
@@ -16,13 +25,6 @@
 		<jaxb-api.version>2.2.1</jaxb-api.version>
 		<main.class>ikube.web.Ikube</main.class>
 	</properties>
-
-	<parent>
-		<groupId>ikube</groupId>
-		<artifactId>ikube</artifactId>
-		<version>3.1.1-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent>
 
 	<build>
 		<resources>
@@ -406,6 +408,11 @@
 			<artifactId>tiles-jsp</artifactId>
 			<version>2.2.2</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin</artifactId>
+			<version>6.8.1</version>
 		</dependency>
 	</dependencies>
 
