--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 		<module>code/core</module>
 		<module>code/war</module>
 		<module>code/web</module>
+		<module>code/gui</module>
 		<module>code/libs</module>
 		<module>code/tool</module>
 	</modules>
