--- a/code/gui/src/main/webapp/WEB-INF/web.xml
+++ b/code/gui/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	id="WebApp_ID" version="2.5">
-	<display-name>Test</display-name>
+<web-app 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+	
+	<display-name>ikube-gui</display-name>
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>classpath:log4j.properties</param-value>
@@ -40,7 +42,7 @@
 			<description>Vaadin application bean to start</description>
 			<param-name>applicationBean</param-name>
 			<param-value>fooApplication</param-value>
-		</init-param>		
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Test Application</servlet-name>
@@ -53,7 +55,7 @@
 	<welcome-file-list>
 		<welcome-file>loginform.jsp</welcome-file>
 	</welcome-file-list>
-	
+
 	<session-config>
 		<session-timeout>10</session-timeout>
 	</session-config>
