Cleaned up and fixed all the tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@945 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -45,6 +45,14 @@
 			</fileset>
 		</delete>
 	</target>
+	
+	<target name="clean-cluster-servers">
+		<sshexec host="somehost"
+  			username="dude"
+  			password="yo"
+  			command="touch somefile"/>
+	</target>
+	
 	<!-- 
 		This target will copy the common, the production and the profile configuration to the 
 		specified output directory. The profile must be the name of the configuration directory 
