--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -163,12 +163,6 @@
 								<!-- Rename the wars to ikube.war for convenience. -->
 								<echo message="Renaming Ikube war for convenience : " />
 								<move file="${target.directory}/${final.name}" tofile="${target.directory}/${ikube.war}" />
-								<!-- Deploy the Ikube war into the cluster. -->
-								<!-- <echo message="Deploying Ikube to cluster : " /> -->
-								<!-- <ant antfile="build.xml" target="clean.servers" inheritrefs="true" /> -->
-								<!-- <ant antfile="build.xml" target="deploy" inheritrefs="true" /> -->
-								<!-- Copy the external configuration to the servers. -->
-								<!-- <ant antfile="build.xml" target="deploy.configuration" inheritrefs="true" /> -->
 								<!-- Zip Ikube and the configuration directory for upload to Google Code -->
 								<echo message="Zipping ikube with configuration : " />
 								<ant antfile="build.xml" target="zip" inheritrefs="true" />
@@ -223,7 +217,7 @@
 					</connectors>
 				</configuration>
 				<executions>
-					<!-- <execution>
+					<execution>
 						<id>start-jetty</id>
 						<phase>pre-integration-test</phase>
 						<goals>
@@ -239,7 +233,7 @@
 						<goals>
 							<goal>stop</goal>
 						</goals>
-					</execution> -->
+					</execution>
 				</executions>
 				<dependencies>
 					<dependency>
@@ -408,11 +402,6 @@
 			<artifactId>tiles-jsp</artifactId>
 			<version>2.2.2</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin</artifactId>
-			<version>6.8.1</version>
 		</dependency>
 	</dependencies>
 
