--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -1,6 +1,7 @@
 <project name="Deploy Ikube Cluster" default="deploy">
 
 	<property file="build.properties" />
+	<!-- The default profile to deploy. -->
 	<property name="profile" value="production" />
 
 	<!-- 
@@ -19,21 +20,33 @@
 			filesonly="false" 
 			update="false" 
 			whenempty="skip">
-			<zipfileset dir="${target.directory}/${tomcat.unpacked}" prefix="${tomcat.unpacked}">
-			</zipfileset>
+			<zipfileset dir="${target.directory}/${tomcat.unpacked}" prefix="${tomcat.unpacked}" />
 		</zip>
 	</target>
 
+	<!-- Deploys the war to all the servers. -->
 	<target name="deploy">
 		<!-- Deploy to the server -->
-		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
-		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.6:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
-		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.7:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
-		<scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.8:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
+		<antcall target="copy-to-server">
+			<param name="file-to-copy" value="${target.directory}/${ikube.war}" />
+			<param name="server-directory" value="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/webapps" />
+		</antcall>
+		<antcall target="copy-to-server">
+			<param name="file-to-copy" value="${target.directory}/${ikube.war}" />
+			<param name="server-directory" value="michael:caherline@192.168.1.6:/usr/share/apache-tomcat-7.0.27/webapps" />
+		</antcall>
+		<antcall target="copy-to-server">
+			<param name="file-to-copy" value="${target.directory}/${ikube.war}" />
+			<param name="server-directory" value="michael:caherline@192.168.1.7:/usr/share/apache-tomcat-7.0.27/webapps" />
+		</antcall>
+		<antcall target="copy-to-server">
+			<param name="file-to-copy" value="${target.directory}/${ikube.war}" />
+			<param name="server-directory" value="michael:caherline@192.168.1.8:/usr/share/apache-tomcat-7.0.27/webapps" />
+		</antcall>
 	</target>
 	
-	<target name="deploy-one">
-	    <scp file="${target.directory}/${ikube.war}" todir="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
+	<target name="copy-to-server">
+	    <scp file="${file-to-copy}" todir="${server-directory}" trust="true" failonerror="false" />
 	</target>
 
 	<target name="clean.server">
@@ -79,25 +92,38 @@
 	<target name="deploy.configuration.for.jetty">
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${user.dir}" overwrite="true" />
 	</target>
+	
+	<!-- This target will deploy the configuration to the servers. -->
 	<target name="deploy.configuration">
 		<echo>User dir: ${user.dir}</echo>
 		<echo>User home: ${user.home}</echo>
 		<copy file="${configuration.directory}/${ikube.configuration.jar}" todir="./src/main/webapp/docs" failonerror="true" />
+		
 		<!-- Deploy configuration on server -->
-		<scp todir="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
-			<fileset dir="${configuration.directory}/ikube" />
-		</scp>
-		<scp todir="michael:caherline@192.168.1.6:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
-			<fileset dir="${configuration.directory}/ikube" />
-		</scp>
-		<scp todir="michael:caherline@192.168.1.7:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
-			<fileset dir="${configuration.directory}/ikube" />
-		</scp>
-		<scp todir="michael:caherline@192.168.1.8:/usr/share/apache-tomcat-7.0.27/bin/ikube" trust="true" failonerror="false">
-			<fileset dir="${configuration.directory}/ikube" />
-		</scp>
+		<antcall target="copy-directory-to-server">
+			<param name="directory-to-copy" value="${configuration.directory}/ikube" />
+			<param name="server-directory" value="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+		</antcall>
+		<antcall target="copy-directory-to-server">
+			<param name="directory-to-copy" value="${configuration.directory}/ikube" />
+			<param name="server-directory" value="michael:caherline@192.168.1.6:/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+		</antcall>
+		<antcall target="copy-directory-to-server">
+			<param name="directory-to-copy" value="${configuration.directory}/ikube" />
+			<param name="server-directory" value="michael:caherline@192.168.1.7:/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+		</antcall>
+		<antcall target="copy-directory-to-server">
+			<param name="directory-to-copy" value="${configuration.directory}/ikube" />
+			<param name="server-directory" value="michael:caherline@192.168.1.8:/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+		</antcall>
 	</target>
-
+	
+	<target name="copy-directory-to-server">
+	    <scp todir="${server-directory}" trust="true" failonerror="false">
+	    	<fileset dir="${directory-to-copy}" />
+	    </scp>
+	</target>
+	
 	<target name="start.tomcat.cluster">
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
