--- a/pom.xml
+++ b/pom.xml
@@ -893,13 +893,13 @@
 			<artifactId>infinispan-core</artifactId>
 			<version>5.1.5.FINAL</version>
 		</dependency> -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt</artifactId>
 			<version>2.4.0</version>
 			<type>pom</type>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		<!-- <dependency>
 			<groupId>com.smartgwt</groupId>
 			<artifactId>smartgwt</artifactId>
 			<version>2.4</version>
@@ -908,7 +908,7 @@
 			<groupId>com.smartgwt</groupId>
 			<artifactId>smartgwt-skins</artifactId>
 			<version>2.4</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<repositories>
