--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<repository>
 			<id>ikube</id>
 			<name>ikube-releases</name>
-			<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local</url>
+			<url>http://ikube.be:8080/artifactory/libs-release-local</url>
 		</repository>
 	</distributionManagement>
 
@@ -774,40 +774,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-core</artifactId>
-			<version>5.5.0</version>
-			<scope>compile</scope>
-		</dependency> -->
-		<!-- <dependency>
-			<groupId>org.springframework.batch</groupId>
-			<artifactId>spring-batch-core</artifactId>
-			<version>2.1.8.RELEASE</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.batch</groupId>
-			<artifactId>spring-batch-admin-manager</artifactId>
-			<version>1.2.1.RELEASE</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.batch</groupId>
-			<artifactId>spring-batch-integration</artifactId>
-			<version>1.2.0.RELEASE</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.batch</groupId>
-			<artifactId>spring-batch-samples</artifactId>
-			<version>1.1.4.RELEASE</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency> -->
 		<dependency>
 			<groupId>org.apache.openjpa</groupId>
 			<artifactId>openjpa-all</artifactId>
@@ -882,33 +848,14 @@
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast-all</artifactId>
 			<version>2.1.2</version>
+			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.infinispan</groupId>
-			<artifactId>infinispan-core</artifactId>
-			<version>5.1.5.FINAL</version>
-		</dependency> -->
-		<!-- <dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt</artifactId>
-			<version>2.4.0</version>
-			<type>pom</type>
-		</dependency> -->
-		<!-- <dependency>
-			<groupId>com.smartgwt</groupId>
-			<artifactId>smartgwt</artifactId>
-			<version>2.4</version>
-		</dependency>
-		<dependency>
-			<groupId>com.smartgwt</groupId>
-			<artifactId>smartgwt-skins</artifactId>
-			<version>2.4</version>
-		</dependency> -->
 	</dependencies>
 
 	<repositories>
@@ -954,7 +901,7 @@
 		</repository>
 		<repository>
 			<id>ikube</id>
-			<url>http://ikube.dyndns.org:8080/artifactory/libs-release-local/</url>
+			<url>http://ikube.be:8080/artifactory/libs-release-local/</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
