Fixed some cluster synch bugs, cleaned up a little and getting ready for the migration to the new interface.
git-svn-id: http://ikube.googlecode.com/svn/trunk@959 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/gui/pom.xml
+++ b/code/gui/pom.xml
@@ -109,12 +109,12 @@
                 <soyc>false</soyc>
             </configuration>
             <executions>
-                <execution>
+                <!-- <execution>
                     <goals>
                         <goal>resources</goal>
                         <goal>compile</goal>
                     </goals>
-                </execution>
+                </execution> -->
             </executions>
         </plugin>
         
