Renamed the configuration folder, cleaned some tests and the project build files.
git-svn-id: http://ikube.googlecode.com/svn/trunk@960 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,13 @@
 ikube-war=ikube.war
-ikube-gui-war=ikube-gui.war
+ikube-gui-war=ikube-console.war
 ikube-configuration-jar=configuration.jar
 
 sleep=30
 
 target-directory=code/war/target
 target-gui-directory=code/gui/target
-configuration-directory=code/code/target/configuration
+configuration-directory=code/core/src/main/resources/ikube
+output-configuration-directory=code/war/target/ikube
 
 tomcat=/usr/share/apache-tomcat-7.0.27
 tomcat-bin=${tomcat}/bin
