--- a/build.xml
+++ b/build.xml
@@ -8,19 +8,31 @@
 
 	<target name="everything">
 	    <antcall target="prepare-everything" />
+	    <antcall target="stop-all-servers" />
 	    <antcall target="clean-all-servers" />
-	    <antcall target="deploy-ikube" />
 	    <antcall target="deploy-configuration" />
+	    <antcall target="deploy-ikube" />
+	    <antcall target="start-all-servers" />
+	</target>
+	
+	<target name="stop-all-servers" >
+        <!-- 
+        	Is there a task to maintain conversation state in an ssh session? And not sshsession 
+        	because ant must be installed on the target machine.
+        -->
+    </target>
+    
+	<target name="start-all-servers">
+	    <!-- 
+        	Is there a task to maintain conversation state in an ssh session? And not sshsession 
+        	because ant must be installed on the target machine.
+        -->
 	</target>
 	
 	<target name="prepare-everything">
 		<antcall target="package-configuration" />
 		<antcall target="jar-configuration" />
 		<antcall target="deploy-configuration-for-jetty" />
-	    
-	    <!-- Rename the wars to ikube.war for convenience. -->
-		<echo message="Renaming Ikube war for convenience : " />
-		<move file="${target-directory}/${final.name}" tofile="${target-directory}/${ikube-war}" />
 		<!-- Zip Ikube and the configuration directory for upload to Google Code -->
 		<echo message="Zipping ikube with configuration : " />
 		<antcall target="zip-ikube" />
@@ -31,11 +43,9 @@
 		bin directory, then zip everything up again into a zip for distribution/deployment.
 	-->
 	<target name="zip-ikube">
-		<untar compression="gzip" dest="target" src="code/libs/tools/${tomcat-gzip}">
-		</untar>
-		<unjar src="${configuration-directory}/${ikube-configuration-jar}" dest="${target-directory}/${tomcat-unpacked}/bin" overwrite="true" />
-		<copy file="${target-directory}/${ikube-war}" todir="${target-directory}/${tomcat-unpacked}/webapps" overwrite="true">
-		</copy>
+		<untar compression="gzip" dest="code/war/target" src="code/libs/tools/${tomcat-gzip}" />
+		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="${target-directory}/${tomcat-unpacked}/bin/ikube" overwrite="true" />
+		<copy file="${target-directory}/${ikube-war}" todir="${target-directory}/${tomcat-unpacked}/webapps" overwrite="true" />
 		<zip 
 			destfile="${target-directory}/ikube.zip" 
 			compress="true" 
@@ -53,10 +63,10 @@
 			<param name="file-to-copy" value="${target-directory}/${ikube-war}" />
 			<param name="server-directory" value="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/webapps" />
 		</antcall>
-		<antcall target="copy-to-server">
+		<!-- <antcall target="copy-to-server">
 			<param name="file-to-copy" value="${target-gui-directory}/${ikube-gui-war}" />
 			<param name="server-directory" value="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/webapps" />
-		</antcall>
+		</antcall> -->
 		<antcall target="copy-to-server">
 			<param name="file-to-copy" value="${target-directory}/${ikube-war}" />
 			<param name="server-directory" value="michael:caherline@192.168.1.6:/usr/share/apache-tomcat-7.0.27/webapps" />
@@ -85,6 +95,9 @@
 		<antcall target="clean-server">
 		    <param name="host" value="192.168.1.7" />
 		</antcall>
+		<antcall target="clean-server">
+		    <param name="host" value="192.168.1.8" />
+		</antcall>
 	</target>
 	
 	<target name="clean-server">
@@ -93,7 +106,7 @@
 			trust="true"
 			username="root"
 			password="caherline"
-			command="rm -r /usr/share/apache-tomcat-7.0.27/bin/ikube/*"
+			command="rm -r /usr/share/apache-tomcat-7.0.27/bin/ikube"
 			failonerror="false" />
 		<sshexec host="${host}"
 			trust="true"
@@ -105,7 +118,25 @@
 			trust="true"
 			username="root"
 			password="caherline"
-			command="rm -r /usr/share/apache-tomcat-7.0.27/logs/*" 
+			command="rm -r /usr/share/apache-tomcat-7.0.27/logs" 
+			failonerror="false" />
+		<sshexec host="${host}"
+			trust="true"
+			username="root"
+			password="caherline"
+			command="mkdir /usr/share/apache-tomcat-7.0.27/bin/ikube" 
+			failonerror="false" />
+		<sshexec host="${host}"
+			trust="true"
+			username="root"
+			password="caherline"
+			command="mkdir /usr/share/apache-tomcat-7.0.27/logs" 
+			failonerror="false" />
+		<sshexec host="${host}"
+			trust="true"
+			username="root"
+			password="caherline"
+			command="chmod 777 -R /usr/share/apache-tomcat-7.0.27" 
 			failonerror="false" />
 	</target>
 	
@@ -115,54 +146,66 @@
 		in the conf folder int he core resources folder.  
 	-->
 	<target name="package-configuration">
-		<delete dir="${configuration-directory}" />
+	    <delete dir="${output-configuration-directory}" />
 		<!-- Copy the common configuration -->
-		<copy todir="${configuration-directory}/ikube/common" failonerror="false">
-			<fileset dir="../core/src/main/resources/conf/common" />
-		</copy>
-		<!-- Copy the profile configuration -->
-		<copy todir="${configuration-directory}/ikube/${profile}" failonerror="false">
-			<fileset dir="../core/src/main/resources/conf/${profile}" />
+		<copy todir="${output-configuration-directory}/common" failonerror="false">
+			<fileset dir="code/core/src/main/resources/ikube/common" />
 		</copy>
 		<!-- Copy the production configuration, with the geo name stuff -->
-		<copy todir="${configuration-directory}/ikube/production" failonerror="false">
-			<fileset dir="../core/src/main/resources/conf/production" />
+		<copy todir="${output-configuration-directory}/production" failonerror="false">
+			<fileset dir="code/core/src/main/resources/ikube/production" />
+		</copy>
+		<!-- Copy the profile configuration -->
+		<copy todir="${output-configuration-directory}/${profile}" failonerror="false">
+			<fileset dir="code/core/src/main/resources/ikube/${profile}" />
 		</copy>
 	</target>
 	<target name="jar-configuration">
-		<jar destfile="${configuration-directory}/${ikube-configuration-jar}" basedir="${configuration-directory}" />
+		<jar destfile="${output-configuration-directory}/${ikube-configuration-jar}" basedir="${output-configuration-directory}" />
 	</target>
 	<target name="deploy-configuration-for-jetty">
-		<unjar src="${configuration-directory}/${ikube-configuration-jar}" dest="${user-dir}" overwrite="true" />
+		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="code/war/ikube" overwrite="true" />
 	</target>
 	
 	<!-- This target will deploy the configuration to the servers. -->
 	<target name="deploy-configuration">
 		<echo>User dir: ${user-dir}</echo>
 		<echo>User home: ${user-home}</echo>
-		<copy file="${configuration-directory}/${ikube-configuration-jar}" todir="./src/main/webapp/docs" failonerror="true" />
+		<copy file="${output-configuration-directory}/${ikube-configuration-jar}" todir="code/core/src/main/webapp/docs" failonerror="true" />
 		
 		<!-- Deploy configuration on server -->
 		<antcall target="copy-directory-to-server">
-			<param name="directory-to-copy" value="${configuration-directory}/ikube" />
-			<param name="server-directory" value="michael:caherline@192.168.1.4:/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+			<param name="host" value="192.168.1.4" />
+			<param name="directory-to-copy" value="${output-configuration-directory}" />
+			<param name="server-directory" value="/usr/share/apache-tomcat-7.0.27/bin/ikube" />
 		</antcall>
 		<antcall target="copy-directory-to-server">
-			<param name="directory-to-copy" value="${configuration-directory}/ikube" />
-			<param name="server-directory" value="michael:caherline@192.168.1.6:/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+		    <param name="host" value="192.168.1.6" />
+			<param name="directory-to-copy" value="${output-configuration-directory}" />
+			<param name="server-directory" value="/usr/share/apache-tomcat-7.0.27/bin/ikube" />
 		</antcall>
 		<antcall target="copy-directory-to-server">
-			<param name="directory-to-copy" value="${configuration-directory}/ikube" />
-			<param name="server-directory" value="michael:caherline@192.168.1.7:/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+		    <param name="host" value="192.168.1.7" />
+			<param name="directory-to-copy" value="${output-configuration-directory}" />
+			<param name="server-directory" value="/usr/share/apache-tomcat-7.0.27/bin/ikube" />
 		</antcall>
 		<antcall target="copy-directory-to-server">
-			<param name="directory-to-copy" value="${configuration-directory}/ikube" />
-			<param name="server-directory" value="michael:caherline@192.168.1.8:/usr/share/apache-tomcat-7.0.27/bin/ikube" />
+		    <param name="host" value="192.168.1.8" />
+			<param name="directory-to-copy" value="${output-configuration-directory}" />
+			<param name="server-directory" value="/usr/share/apache-tomcat-7.0.27/bin/ikube" />
 		</antcall>
 	</target>
 	
 	<target name="copy-directory-to-server">
-	    <scp todir="${server-directory}" trust="true" failonerror="false">
+	    <!-- Create the ikube configuration directory -->
+	    <sshexec 
+		    host="${host}"
+			trust="true"
+			username="root"
+			password="caherline"
+			command="mkdir -p ${server-directory}"
+			failonerror="false" />
+	    <scp todir="michael:caherline@${host}:${server-directory}" trust="true" failonerror="false">
 	    	<fileset dir="${directory-to-copy}" />
 	    </scp>
 	</target>
