--- a/code/gui/pom.xml
+++ b/code/gui/pom.xml
@@ -2,18 +2,18 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
-
 	<artifactId>ikube-gui</artifactId>
 	<packaging>war</packaging>
-	
+
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
 		<version>3.1.1-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-	
+
 	<properties>
 		<aspectj.version>1.6.3.RELEASE</aspectj.version>
 		<spring-security.version>2.0.4</spring-security.version>
@@ -51,16 +51,16 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-   			<groupId>org.vaadin.addons</groupId>
-   			<artifactId>invient-charts</artifactId>
-   			<version>0.8.6</version>
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>invient-charts</artifactId>
+			<version>0.8.6</version>
 		</dependency>
-		
+
 		<dependency>
-	<groupId>com.google.gwt</groupId>
-	<artifactId>gwt-servlet</artifactId>
-	<version>${gwtVersion}</version>
-</dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-servlet</artifactId>
+			<version>${gwtVersion}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.gwt</groupId>
@@ -68,60 +68,53 @@
 			<version>${gwtVersion}</version>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
+		<finalName>ikube-console</finalName>
 		<plugins>
 			<plugin>
-            <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-maven-plugin</artifactId>
-            <version>1.0.2</version>
-            <executions>
-                <execution>
-                    <configuration>
-                        <!-- if you don't specify any modules, the plugin will find them -->
-                        <modules>
-                            <module>ikube.gui.widgets.InvientWidgets</module>
-                        </modules>
-                    </configuration>
-                    <goals>
-                        <goal>update-widgetset</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-        
-        <!-- Compiles your custom GWT components with the GWT compiler -->
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>gwt-maven-plugin</artifactId>
-        	<!-- Version 2.1.0-1 works at least with Vaadin 6.5 -->
-            <version>2.2.0</version>
-            <configuration>
-                <!-- if you don't specify any modules, the plugin will find them -->
-                <!--modules>
-                </modules-->
-                <webappDirectory>${project.build.directory}/${project.build.finalName}/VAADIN/widgetsets</webappDirectory>
-                <extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
-                <runTarget>clean</runTarget>
-                <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
-                <noServer>true</noServer>
-                <port>8080</port>
-                <soyc>false</soyc>
-            </configuration>
-            <executions>
-                <!-- <execution>
-                    <goals>
-                        <goal>resources</goal>
-                        <goal>compile</goal>
-                    </goals>
-                </execution> -->
-            </executions>
-        </plugin>
-        
-			<!-- 
-				This plugin starts a Jetty server before the integration tests and stops it after the 
-				integration tests. It can also be used to start a jetty server from the command line for testing. 
-			-->
+				<groupId>com.vaadin</groupId>
+				<artifactId>vaadin-maven-plugin</artifactId>
+				<version>1.0.2</version>
+				<executions>
+					<execution>
+						<configuration>
+							<!-- if you don't specify any modules, the plugin will find them -->
+							<modules>
+								<module>ikube.gui.widgets.InvientWidgets</module>
+							</modules>
+						</configuration>
+						<goals>
+							<goal>update-widgetset</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Compiles your custom GWT components with the GWT compiler -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>gwt-maven-plugin</artifactId>
+				<!-- Version 2.1.0-1 works at least with Vaadin 6.5 -->
+				<version>2.2.0</version>
+				<configuration>
+					<!-- if you don't specify any modules, the plugin will find them -->
+					<!--modules> </modules -->
+					<webappDirectory>${project.build.directory}/${project.build.finalName}/VAADIN/widgetsets</webappDirectory>
+					<extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
+					<runTarget>clean</runTarget>
+					<hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
+					<noServer>true</noServer>
+					<port>8080</port>
+					<soyc>false</soyc>
+				</configuration>
+				<executions>
+					<!-- <execution> <goals> <goal>resources</goal> <goal>compile</goal> </goals> </execution> -->
+				</executions>
+			</plugin>
+
+			<!-- This plugin starts a Jetty server before the integration tests and stops it after the integration tests. It can also be used to start 
+				a jetty server from the command line for testing. -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
@@ -143,32 +136,14 @@
 					</connectors>
 				</configuration>
 				<executions>
-					<!-- <execution>
-						<id>start-jetty</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<daemon>true</daemon>
-						</configuration>
-					</execution>
-					<execution>
-						<id>stop-jetty</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-					</execution> -->
+					<!-- <execution> <id>start-jetty</id> <phase>pre-integration-test</phase> <goals> <goal>run</goal> </goals> <configuration> <daemon>true</daemon> 
+						</configuration> </execution> <execution> <id>stop-jetty</id> <phase>post-integration-test</phase> <goals> <goal>stop</goal> </goals> </execution> -->
 				</executions>
 				<dependencies>
 					<dependency>
-						<!-- 
-							XXX It is included to force commons-logging to use 2.5 API instead of 2.3. This caused 
-							by internal dependencies of Jetty, which use version 2.5, but have it packaged in a different 
-							group ID: org.mortbay.jetty. TODO (Roman): If it gets broken again, try to "exclude" servlet-api 
-							dependencies from commons-logging and commons-fileupload. 
-						-->
+						<!-- XXX It is included to force commons-logging to use 2.5 API instead of 2.3. This caused by internal dependencies of Jetty, which use 
+							version 2.5, but have it packaged in a different group ID: org.mortbay.jetty. TODO (Roman): If it gets broken again, try to "exclude" servlet-api 
+							dependencies from commons-logging and commons-fileupload. -->
 						<groupId>javax.servlet</groupId>
 						<artifactId>servlet-api</artifactId>
 						<version>2.5</version>
@@ -244,7 +219,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
+
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
@@ -302,7 +277,7 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	
+
 	<repositories>
 		<repository>
 			<id>terracotta-repository</id>
@@ -330,11 +305,11 @@
 			<url>http://repository.springsource.com/maven/bundles/milestone</url>
 		</repository>
 		<repository>
-   			<id>vaadin-addons</id>
-   			<url>http://maven.vaadin.com/vaadin-addons</url>
+			<id>vaadin-addons</id>
+			<url>http://maven.vaadin.com/vaadin-addons</url>
 		</repository>
 	</repositories>
-	
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>codehaus-snapshots</id>
@@ -356,20 +331,20 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</pluginRepository>
-        <pluginRepository>
-            <id>com.springsource.repository.bundles.release</id>
+		<pluginRepository>
+			<id>com.springsource.repository.bundles.release</id>
 			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
 			<url>http://repository.springsource.com/maven/bundles/release</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>com.springsource.repository.bundles.external</id>
+		</pluginRepository>
+		<pluginRepository>
+			<id>com.springsource.repository.bundles.external</id>
 			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
 			<url>http://repository.springsource.com/maven/bundles/external</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>com.springsource.repository.bundles.milestone</id>
+		</pluginRepository>
+		<pluginRepository>
+			<id>com.springsource.repository.bundles.milestone</id>
 			<name>SpringSource Enterprise Bundle Repository - External Bundle Milestones</name>
 			<url>http://repository.springsource.com/maven/bundles/milestone</url>
-        </pluginRepository>
+		</pluginRepository>
 	</pluginRepositories>
 </project>
