--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -111,6 +111,11 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.48</version>
+		</dependency>
 	</dependencies>
 
 </project>
