--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -26,6 +26,7 @@
 	</properties>
 
 	<build>
+	    <finalName>ikube</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
@@ -40,6 +41,116 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.2</version>
+			</plugin>
+			<!-- 
+				This plugin reads the properties from the buid.properties file and makes them all available 
+				to the rest of the Maven build process. 
+			-->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0-alpha-1</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>../../build.properties</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>write-release-info</id>
+						<phase>pre-integration-test</phase>
+						<configuration>
+							<target>
+								<echo message="Writing release file : " />
+								<echo file="src/main/webapp/WEB-INF/templates/release.txt" append="false">
+									${project.version} - ${maven.build.timestamp}
+								</echo>
+								<!-- <copy file="../core/src/main/resources/ikube" todir="ikube" overwrite="true" /> -->
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<!-- 
+				This plugin starts a Jetty server before the integration tests and stops it after the 
+				integration tests. It can also be used to start a jetty server from the command line for testing. 
+			-->
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.25</version>
+				<configuration>
+					<stopKey>stop</stopKey>
+					<stopPort>9081</stopPort>
+					<scanIntervalSeconds>10000</scanIntervalSeconds>
+					<contextPath>/ikube</contextPath>
+					<scanTargets>
+						<scanTarget>src/main/resources</scanTarget>
+						<scanTarget>src/main/webapp</scanTarget>
+					</scanTargets>
+					<connectors>
+						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+							<port>9080</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
+				</configuration>
+				<!-- <executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<daemon>true</daemon>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions> -->
+				<dependencies>
+					<dependency>
+						<!-- 
+							XXX It is included to force commons-logging to use 2.5 API instead of 2.3. This caused 
+							by internal dependencies of Jetty, which use version 2.5, but have it packaged in a different 
+							group ID: org.mortbay.jetty. TODO (Roman): If it gets broken again, try to "exclude" servlet-api 
+							dependencies from commons-logging and commons-fileupload. 
+						-->
+						<groupId>javax.servlet</groupId>
+						<artifactId>servlet-api</artifactId>
+						<version>2.5</version>
+						<scope>compile</scope>
+					</dependency>
+					<dependency>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+						<version>1.1</version>
+						<type>jar</type>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
